# Ai-ck

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LISTING_DATA.md  PITCH_DECK.md  README.md  SPEC.md  agent_swarm_memory.db  ai_web_master.py  api_key_generator.py  audit.sh  auto_configure_vps.py  auto_system.py  auto_system_v7.py  auto_vps_creator.py  autonomous_engine.py  benchmark.py  benchmark_results.json  buyers_list.json  cognitive_planner.py  config.json  deploy_n8n_vps.sh  deploy_to_vps.sh  director_core.py  ecosystem.config.js  gmail_control_plugin.py  gratisvps_register.sh  headless_mainframe.py  hive_network.py  matrix_sentinel.py  multi_agent.py  multi_agent_result_20260719_222759.json  multi_agent_result_20260719_223026.json  multi_model_orchestrator.py  nexus  nexus_cache_sd.db  nexus_cli.py  nexus_engine.py  (+35 more)
agent_swarm/: __init__.py  message_bus.py  orchestrator.py  roundtable.py  shared_memory.py
agents/: agent_manager.py  cli.py
auto-vps-agent/: agent.js  agent.py  oci_profile.csv
ck_nexus_cli/: __init__.py  main.py
cli/: dashboard.py  main.py
core/: a2a_protocol.py  advanced_memory.py  command_bus.py  consolidation_daemon.py  embedding.py  failover_router.py  feedback_integration.py  line_auth.py  llm_client.py  memory.py  oauth_server.py  plugin_manager.py  security_audit.py  token_store.py  vector_memory.py
deploy/: docker-compose.yml  install.sh  install_on_vps.sh  litellm_config.yaml  provider_router.py  setup_shadow_bridge.sh
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMERCIAL.md  DEPLOYMENT.md  IMPROVEMENTS.md  (+9 more)
(+175 files in other folders)
